Fix Navbar on top of the page on mobile and tablet version

--- a/src/app/components/Navbar/styles/navbar.module.css
+++ b/src/app/components/Navbar/styles/navbar.module.css
@@ -4,15 +4,18 @@
 
 .navbar {
   position: fixed;
-  bottom: 0;
+  top: 0;
   left: 0;
   width: 100%;
   background: hsla(240, 1%, 17%, 0.75);
   backdrop-filter: blur(10px);
   border: 1px solid var(--jet);
-  border-radius: 12px 12px 0 0;
   box-shadow: var(--shadow-2);
   z-index: 5;
+
+  /*For fixing it on top on mobile version*/
+  /* bottom: 0; */
+  /* border-radius: 12px 12px 0 0; */
 }
 
 .navbar-list {
@@ -31,8 +34,7 @@
   transition: color var(--transition-1);
 }
 
-.navbar-link:hover
- {
+.navbar-link:hover {
   color: var(--light-gray-70);
 }
 
@@ -45,9 +47,10 @@
    * #NAVBAR
    */
 
-  .navbar {
+  /*For fixing it on top on mobile version*/
+  /* .navbar {
     border-radius: 20px 20px 0 0;
-  }
+  } */
 
   .navbar-list {
     gap: 20px;
