--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -178,45 +178,44 @@ body {
 
 .accordion {
   --bs-accordion-btn-color: var(--orange-yellow-crayola);
-  --bs-accordion-btn-bg:  hsl(0, 0%, 25%);
-  --bs-accordion-btn-focus-box-shadow: var(--shadow-3)
+  --bs-accordion-btn-bg: hsl(0, 0%, 25%);
+  --bs-accordion-btn-focus-box-shadow: var(--shadow-3);
 }
 
 .accordion-button:not(.collapsed) {
-    position: relative;
-    width: 100%;
-    background: var(--border-gradient-onyx);
-    color: var(--orange-yellow-crayola);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 13px 20px;
-    border-bottom-left-radius: 14px;
-    border-bottom-right-radius: 14px;
-    font-size: 20px;
-    text-transform: capitalize;
-    box-shadow: var(--shadow-3);
-    z-index: 1;
-    transition: var(--transition-1);
+  position: relative;
+  width: 100%;
+  background: var(--border-gradient-onyx);
+  color: var(--orange-yellow-crayola);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 13px 20px;
+  border-bottom-left-radius: 14px;
+  border-bottom-right-radius: 14px;
+  font-size: 20px;
+  text-transform: capitalize;
+  box-shadow: var(--shadow-3);
+  z-index: 1;
+  transition: var(--transition-1);
 }
 
 .accordion-button.collapsed {
-    position: relative;
-    width: 100%;
-    margin-bottom: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 13px 20px;
-    font-size: 20px;
-    text-transform: capitalize;
-    box-shadow: var(--shadow-3);
-    z-index: 1;
-    transition: var(--transition-1);
+  position: relative;
+  width: 100%;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 13px 20px;
+  font-size: 20px;
+  text-transform: capitalize;
+  box-shadow: var(--shadow-3);
+  z-index: 1;
+  transition: var(--transition-1);
 }
-
 
 /*-----------------------------------*\
   #REUSED STYLE
@@ -376,6 +375,7 @@ main {
 \*-----------------------------------*/
 
 .sidebar {
+  margin-top: 75px;
   margin-bottom: 15px;
   max-height: 112px;
   overflow: hidden;
@@ -544,8 +544,6 @@ main {
   transform: scale(1.2);
   transition: all ease-in-out 0.2s;
 }
-
-
 
 /*-----------------------------------*\
   #ABOUT
@@ -1581,6 +1579,7 @@ textarea.form-input::-webkit-resizer {
   .sidebar {
     max-height: 180px;
     margin-bottom: 30px;
+    margin-top: 75px;
   }
 
   .sidebar.active {
@@ -1637,7 +1636,6 @@ textarea.form-input::-webkit-resizer {
     max-width: calc(100% - 64px);
     width: calc(100% - 64px);
   }
-
 
   /**
    * #ABOUT
@@ -1869,12 +1867,14 @@ textarea.form-input::-webkit-resizer {
    * SIDEBAR
    */
 
+  .sidebar {
+    margin-top: 75px;
+  }
+
   .contacts-list {
     grid-template-columns: 1fr 1fr;
     gap: 30px 15px;
   }
-
-
 
   /**
    * ABOUT
@@ -1984,6 +1984,13 @@ textarea.form-input::-webkit-resizer {
   }
 
   /**
+   * Sidebar
+   */
+  .sidebar {
+    margin-top: unset;
+  }
+
+  /**
    * MAIN
    */
 
@@ -1996,8 +2003,6 @@ textarea.form-input::-webkit-resizer {
     width: max-content;
     margin: auto;
   }
-
-
 
   /**
    * ABOUT
